# escribano

./: .biomeignore  .env.example  .gitignore  .npmignore  .swp  AGENTS.md  BACKLOG.md  BIOME_SETUP.md  CHANGELOG.md  CLAUDE.md  LICENSE  MILESTONES.md  MVP-FINAL-PUSH.md  PROGRESS.md  README.md  TDD_REVIEW_ISSUES.md  biome.json  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  temp.db  tsconfig.json
.claude/: settings.json
.opencode/: tracking.md  worktree.jsonc
docs/: COMPETITIVE-ANALYSIS-2026-02-22.md  MLX-VLM-POC-LEARNINGS.md  SCREENCAPTUREKIT-POC-SPIKE.md  VLM-BENCHMARK-LEARNINGS.md  VLM-PARALLEL-RESEARCH-2026.md  architecture.md  brainstorm-performance-optimization.md  coding-standards.md  escribano-balanced-scorecard.docx  escribano-balanced-scorecard.md  evaluation-agent-prompt.md  learnings.md  release-process.md  screen_capture_pipeline.md
migrations/: 001_initial.sql  002_clusters.sql  003_observations_vlm_fields.sql  004_observations_unique.sql  005_processing_stats.sql  006_vlm_raw_response.sql  007_subjects.sql  008_artifacts_recording.sql  009_artifact_subjects.sql  010_llm_backend_metadata.sql  011_llm_debug_log.sql  012_llm_debug_log_prompt_result.sql  013_drop_v2_tables.sql  014_recorder_frames.sql  015_observations_frame_fk.sql  016_observations_vlm_stats.sql  017_session_aggregation.sql  018_compaction.sql  019_effort_seconds.sql  020_partial_indexes.sql  (+4 more)
src/scripts/: audio_preprocessor.py  pyproject.toml  rebuild-index.ts  seed-fixtures.ts  test_visual_observer.py  visual_observer_base.py
(+375 files in other folders)
